# network-api

./: .gitignore  .yamllint.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
app/: device_inventory.yaml  main.py  std_errors.py
app/endpoints/: get_device_facts.py  get_device_interfaces.py  get_device_interfaces_ip.py
tests/: test_api_endpoint.py
